--- a/esp/seedlingcontroller/seedlingcontroller.yaml
+++ b/esp/seedlingcontroller/seedlingcontroller.yaml
@@ -10,6 +10,10 @@ esphome:
 wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_pass
+  ap:
+    ssid: esp-captive
+    password: !secret wifi_pass
+captive_portal:
 
 # Enable logging
 logger:
