--- a/esp/plantcontroller/plantcontroller.yaml
+++ b/esp/plantcontroller/plantcontroller.yaml
@@ -10,6 +10,9 @@ esphome:
 wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_pass
+  ap:
+    ssid: esp-captive
+    password: !secret wifi_pass
 
 wireguard:
   address: 10.8.0.108
