--- a/esp/plantcontroller/plantcontroller.yaml
+++ b/esp/plantcontroller/plantcontroller.yaml
@@ -116,7 +116,7 @@ globals:
     initial_value: '0.0'
   - id: light_on
     type: bool
-    restore_value: no
+    restore_value: yes
     initial_value: 'false'
 light:
   - platform: monochromatic
@@ -192,17 +192,11 @@ interval:
       - lambda: |-
           auto time = id(sntp_time).now();
           if (time.hour >= 6 && time.hour < 24) {
-            if (!id(light_on)) {
-              id(light_on) = true;
-              id(pwm_light).turn_on();
-              ESP_LOGD("custom", "Light turned on");
-            }
+            id(pwm_light).turn_on().perform();
+            ESP_LOGD("custom", "Light on");
           } else {
-            if (id(light_on)) {
-              id(light_on) = false;
-              id(pwm_light).turn_off();
-              ESP_LOGD("custom", "Light turned off");
-            }
+            id(pwm_light).turn_off().perform();
+            ESP_LOGD("custom", "Light off");
           }
 switch:
   - platform: gpio
