--- a/esp/plantcontroller/plantcontroller.yaml
+++ b/esp/plantcontroller/plantcontroller.yaml
@@ -234,6 +234,18 @@ switch:
     inverted: true
     id: sw_humidifier
     restore_mode: RESTORE_DEFAULT_OFF
+  - platform: gpio
+    pin: D3
+    name: "Switch 5"
+    inverted: true
+    id: sw_five
+    restore_mode: RESTORE_DEFAULT_ON
+  - platform: gpio
+    pin: D4
+    name: "Switch 6"
+    inverted: true
+    id: sw_six
+    restore_mode: RESTORE_DEFAULT_OFF
 script:
   - id: pump_control
     then:
