--- a/esp/plantcontroller/plantcontroller.yaml
+++ b/esp/plantcontroller/plantcontroller.yaml
@@ -192,6 +192,20 @@ interval:
             id(pwm_light).turn_off().perform();
             ESP_LOGD("custom", "Light is OFF (start hour: %d, duration: %d)", start_hour, id(light_duration_value));
           }
+  - interval: 1min
+    then:
+      - lambda: |-
+          auto now = id(sntp_time).now();
+          // Turn on switch at 8 AM
+          if (now.hour == 8 && now.minute == 0) {
+            id(sw_five).turn_on();
+            ESP_LOGD("custom", "Switch 5 turned ON at 8 AM");
+          }
+          // Turn off switch 5 after 20 hours (at 4 AM next day)
+          else if (now.hour == 4 && now.minute == 0) {
+            id(sw_five).turn_off();
+            ESP_LOGD("custom", "Switch 5 turned OFF after 20 hours");
+          }
 #  - interval: 5min
 #    then:
 #      - lambda: |-
